--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
+streamlit>=1.29.0
+plotly>=5.17.0
 pandas>=2.3.0
 numpy>=2.3.0
-matplotlib>=3.10.0
-seaborn>=0.13.0
 scipy>=1.16.0
 scikit-learn>=1.7.0
-jupyter>=1.0.0
