--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-streamlit>=1.29.0
-plotly>=5.17.0
-pandas>=2.3.0
-numpy>=2.3.0
-scipy>=1.16.0
-scikit-learn>=1.7.0
+streamlit==1.28.1
+pandas==2.0.3
+numpy==1.24.3
+scikit-learn==1.3.0
+plotly==5.15.0
+matplotlib==3.7.2
+seaborn==0.12.2
